--- a/css/page2.css
+++ b/css/page2.css
@@ -12,7 +12,7 @@
 
 .sec1{
     height: 50vh;
-    background-image: linear-gradient(rgba(0,0,0,0.6)50%,rgba(0,0,0,0.6)50%),url(/images/hyderabad.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.6)50%,rgba(0,0,0,0.6)50%),url(./images/hyderabad.jpg);
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
