--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -71,7 +71,7 @@ main{
 .about-bg{
     width: 100%;
     height: 300px;
-    background-image: linear-gradient(rgba(0,0,0,0.6)50%,rgba(0,0,0,0.6)50%),url(./images/about.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.6)50%,rgba(0,0,0,0.6)50%),url(../images/about.jpg);
     background-size: cover;
     color: white;
 }
@@ -79,7 +79,7 @@ main{
 .contact-bg{
     width: 100%;
     height: 300px;
-    background-image: linear-gradient(rgba(0,0,0,0.6)50%,rgba(0,0,0,0.6)50%),url(./images/contact.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.6)50%,rgba(0,0,0,0.6)50%),url(../images/contact.jpg);
     background-size: cover;
     color: white;
     background-position: center;
